styles.css
/* Google fonts */
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");

/* Variables */
:root {
  --header-height: 4rem;

  /*Colors*/
  --first-color: #F5C70B;
  --first-color-alt: #FA7103;
  --title-color: #F5C70B;
  --text-color: #fff;
  --text-color-light: #FA7103;
  --body-color: #121212;
  --container-color: #292929;
  --shadow-color: rgba(60, 60, 60, 0.3);


  /* Font and Typography */
  --body-font: "Poppins", sans-serif;

  /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
  --big-font-size: 2rem;
  --h1-font-size: 1.5rem;
  --h2-font-size: 1.25rem;
  --h3-font-size: 1.125rem;
  --normal-font-size: 0.938rem;
  --small-font-size: 0.813rem;
  --smaller-font-size: 0.75rem;

  /* Font weight */
  --font-medium: 500;
  --font-semi-bold: 600;

  /* Margins */
  /* .25rem = 4px, .5rem = 8px, .75rem = 12px ... */
  --mb-1: 0.5rem;
  --mb-2: 1rem;
  --mb-3: 1.5rem;
  --mb-4: 2rem;
  --mb-5: 2.5rem;
  --mb-6: 3rem;

  /* Z-index */
  --z-tooltip: 10;
  --z-fixed: 100;
}

@media screen and (min-width: 768px) {
  :root {
    --big-font-size: 3rem;
    --h1-font-size: 2.25rem;
    --h2-font-size: 1.5rem;
    --h3-font-size: 1.25rem;
    --normal-font-size: 1rem;
    --small-font-size: 0.875rem;
    --smaller-font-size: 0.813rem;
  }
}

/* Base */
*,
::before,
::after {
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  background: var(--body-color);
  color: var(--text-color);
  line-height: 1.6;
}

/* CSS Reset */
h1,
h2,
h3,
p,
ul {
  margin: 0;
}

ul {
  padding: 0;
  list-style: none;
}

a {
  text-decoration: none;
}

img {
  max-width: 100%;
  height: auto;
}

/* class */
.section {
  padding: 7rem 0 2rem;
}

.section-title,
.section-subtitle {
  text-align: center;
}

.section-title {
  font-size: var(--h1-font-size);
  color: var(--title-color);
  margin-bottom: var(--mb-3);
}

.section-subtitle {
  display: block;
  color: var(--first-color);
  font-weight: var(--font-medium);
  margin-bottom: var(--mb-1);
}

/* Layout */
.bd-container {
  max-width: 960px;
  width: calc(100% - 2rem);
  margin-left: var(--mb-2);
  margin-right: var(--mb-2);
}

.bd-grid {
  display: grid;
  gap: 1.5rem;
}

.l-header {
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: var(--z-fixed);
}

/* Navigation */
.nav {
  max-width: 1024px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: var(--mb-1);
}

@media screen and (max-width: 768px) {
  .nav_menu {
    position: fixed;
    top: -100%;
    left: 10%;
    width: 80%;
    padding: 2rem 0 1rem;
    text-align: center;
    background-color: var(--container-color);
    transition: 0.4s;
    box-shadow: 0 4px 4px var(--shadow-color);
    border-radius: 1rem;
    z-index: var(--z-fixed);
  }
}

.nav_logo img {
  width: 70px;
}

.nav_item {
  margin-bottom: var(--mb-3);
}

.nav_link {
  color: var(--text-color);
  font-weight: var(--font-medium);
}

.hidden_item {
  display: none;
}

.menu {
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: flex;
  padding: 0;
  visibility: visible;
  z-index: 100;
}

/* Hamburger menu line styling */
.line {
  fill: none;
  stroke: var(--text-color);
  stroke-width: 6;
  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
}

.line1 {
  stroke-dasharray: 60 207;
  stroke-width: 6;
}

.line2 {
  stroke-dasharray: 60 207;
  stroke-width: 6;
}

.line3 {
  stroke-dasharray: 60 207;
  stroke-width: 6;
}

.opened .line1 {
  stroke-dasharray: 90 207;
  stroke-dashoffset: -134;
  stroke-width: 6;
}

.opened .line2 {
  stroke-dasharray: 1 60;
  stroke-dashoffset: -30;
  stroke-width: 6;
}

.opened .line3 {
  stroke-dasharray: 90 207;
  stroke-dashoffset: -134;
  stroke-width: 6;
}

/* Show Menu */
.show-menu {
  top: calc(var(--header-height) + 1rem);
}

/* Active Menu */
.active-link {
  color: var(--first-color);
}

/* Change background header */
.scroll-header {
  box-shadow: 0 2px 2px var(--shadow-color);
  background-color: var(--body-color);
}

/* Scroll Top */
.scrollTop {
  position: fixed;
  right: 1rem;
  bottom: -20%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.3rem;
  background: var(--first-color);
  border-radius: 0.4rem;
  z-index: var(--z-tooltip);
  transition: 0.4s;
  visibility: hidden;
}

.scrollTop:hover {
  background-color: var(--first-color-alt);
}

.scrollTop_icon {
  font-size: 1.8rem;
  color: var(--body-color);
}

/* Show scroll Top */
.show-scroll {
  visibility: visible;
  bottom: 1.5rem;
}

/* Home */
.home {
  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/kks_all.jpg);
  background-position: center;
  background-repeat: no-repeat;
  object-fit: cover;
  background-size: cover;
}

.home_container {
  margin-top: -1rem;
  height: calc(100vh - var(--header-height));
  align-content: center;
}

.home_title {
  font-size: var(--big-font-size);
  color: var(--first-color);
  margin-bottom: var(--mb-1);
}

.home_subtitle {
  font-size: var(--h1-font-size);
  color: var(--title-color);
  margin-bottom: var(--mb-4);
}


/* Buttons */
.button {
  display: inline-block;
  background-color: var(--first-color);
  color: #fff;
  padding: 0.75rem 1rem;
  border-radius: 0.5rem;
  transition: 0.3s;
}

.button:hover {
  background-color: var(--first-color-alt);
}

/* Arena */
.arena_data {
  text-align: center;
}

.arena_description {
  margin-bottom: var(--mb-3);
}

.arena_img {
  width: 280px;
  border-radius: 0.5rem;
  justify-self: center;
}


/* Team */
.team_container {
  row-gap: 2.5rem;
  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
}

.team_content {
  text-align: center;
}

.team_img {
  width: 64px;
  height: 64px;

  fill: var(--first-color);
  margin-bottom: var(--mb-2);
}

.team_title {
  font-size: var(--h3-font-size);
  color: var(--title-color);
  margin-bottom: var(--mb-1);
}

.team_description {
  padding: 0 1.5rem;
}


/* Shop */
.shop_container {
  grid-template-columns: repeat(2, 1fr);
  justify-content: center;
}

.shop_content {
  position: relative;
  display: flex;
  flex-direction: column;
  background-color: var(--container-color);
  border-radius: 0.5rem;
  box-shadow: 0 2px 4px var(--shadow-color);
  padding: 0.75rem;
}

.shop_img {
  width: 100px;
  align-self: center;
  margin-bottom: var(--mb-2);
}

.shop_name,
.shop_price {
  font-weight: var(--font-semi-bold);
  color: var(--title-color);
}

.shop_name {
  font-size: var(--normal-font-size);
}

.shop_detail,
.shop_price {
  font-size: var(--small-font-size);
}

.shop_detail {
  margin-bottom: var(--mb-1);
}

.shop_button {
  position: absolute;
  bottom: 0;
  right: 0;
  display: flex;
  padding: 0.625rem 0.813rem;
  border-radius: 0.5rem 0 0.5rem 0;
}

/* Partners  */
.partners-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 20px;
}

.partner {
  /* Adjust the percentage to change the number of logos per row */
  flex: 1 1 calc(25% - 40px);
  max-width: calc(25% - 40px);
  box-sizing: border-box;
}

.partner_img {
  max-width: 100%;
  height: auto;
  display: block;
  margin: 0 auto;
}

/* Footer */
.footer_container {
  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
  row-gap: 2rem;
}

.footer_logo {
  color: var(--logo-dark-color);
  font-size: 1.2rem;
}

.footer_logo span {
  margin-top: -0.8rem;
  color: var(--first-color);
}

.footer_description {
  display: block;
  font-size: var(--small-font-size);
  margin: 0.25rem 0 var(--mb-3);
}

.footer_social {
  font-size: 1.5rem;
  color: var(--title-color);
  margin-right: var(--mb-2);
}

.footer_title {
  font-size: var(--h2-font-size);
  color: var(--title-color);
  margin-right: var(--mb-2);
}

.footer_link {
  display: inline-block;
  color: var(--text-color);
  margin-bottom: var(--mb-1);
}

.footer_link:hover {
  color: var(--first-color);
}

.footer_copy {
  text-align: center;
  font-size: var(--small-font-size);
  color: var(--text-color-light);
  margin-top: 3.5rem;
}

/* Scroll bar */
::-webkit-scrollbar {
  width: 0.62rem;
  background-color: var(--container-color);
  border-radius: 0.5rem;
}

::-webkit-scrollbar-thumb {
  background-color: var(--first-color);
  border-radius: 0.5rem;
}

::-webkit-scrollbar-thumb:hover {
  background-color: var(--first-color-alt);
}


/* Media queries */
@media screen and (max-width: 480px) {
  .shop_container {
    /* Change from 2 columns to 3 rows: */
    grid-template-columns: max-content;
    justify-content: center;
  }

  .partner {
    flex: 1 1 calc(50% - 40px);
    /* 2 logos per row for small screens */
    max-width: 100%;
  }
}

@media screen and (min-width: 590px) {

  .home_container,
  .arena_container,
  .app_container {
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
  }

  .arena_data,
  .arena_initial,
  .app_data,
  .app_initial {
    text-align: initial;
  }

  .arena_img,
  .app_img {
    width: 380px;
    order: -1;
  }

  .app_store {
    width: 130px;
  }

  .contact_container {
    grid-template-columns: 1.75fr 1fr;
    align-items: center;
  }

  .contact_button {
    justify-self: center;
  }
}

@media screen and (min-width: 768px) {
  body {
    margin: 0;
  }

  .section {
    padding-top: 8rem;
  }

  .nav_logo img {
    width: 100px;
  }

  /* Leaving header without a hamburger menu */
  .nav_list {
    display: flex;
  }

  .nav_item {
    margin-left: var(--mb-5);
    margin-bottom: 0;
  }

  .nav_toggle {
    display: none;
  }

  .change-theme {
    position: initial;
    margin-top: 2px;
    margin-left: 2.5rem;
  }

  .home_container {
    height: 100vh;
    justify-items: center;
  }

  .home_container {
    margin-bottom: -3rem;
  }

  .team_container,
  .shop_container {
    margin-top: var(--mb-6);
  }

  .shop_container {
    grid-template-columns: repeat(3, 210px);
  }

  .shop_content {
    padding: 1.5rem;
  }

  .shop_img {
    width: 130px;
  }

  .app_store {
    margin: 0 var(--mb-1) 0 0;
  }
}

@media screen and (min-width: 960px) {
  .home_container {
    margin-top: 1rem;
  }

  .nav_link {
    font-size: var(--small-font-size);
  }

  .home_title,
  .home_subtitle {
    font-size: var(--h1-font-size);
  }

  .bd-container {
    margin-left: auto;
    margin-right: auto;
  }

  .home_img {
    width: 500px;
    margin-top: var(--mb-1);
  }

  .arena_container,
  .app_container {
    column-gap: 7rem;
  }
}


@media (max-width: 1200px) {
  .partner {
    flex: 1 1 calc(33.33% - 40px);
    /* 3 logos per row for medium screens */
    max-width: calc(33.33% - 40px);
  }
}

@media (max-width: 768px) {
  .partner {
    flex: 1 1 calc(50% - 40px);
    /* 2 logos per row for small screens */
    max-width: calc(50% - 40px);
  }
}

